--- a/src/components/CartSidebar.module.css
+++ b/src/components/CartSidebar.module.css
@@ -2,7 +2,7 @@
     position: fixed;
     inset: 0;
     background: rgba(0, 0, 0, 0.3);
-    z-index: 1000;
+    z-index: 1250;
     opacity: 0;
     visibility: hidden;
     transition: var(--transition);
@@ -21,7 +21,7 @@
     height: 100vh;
     width: 450px;
     background: white;
-    z-index: 1001;
+    z-index: 1260;
     transform: translateX(100%);
     transition: var(--transition);
     display: flex;
